# Train-Control

./: .gitignore  README.md  makefile
libs/: common.h
libs/can/: canTrain.c  canTrain.h
libs/communication/: communication.h  tcp_interface.c
libs/odometrie/: odometrie.c  odometrie.h
libs/train/: train.c  train.h
libs/train-utils/: train-utils.h  train.c
libs/unirail/CAN/: MESCAN1_Correspondance_Infra.h  MESCAN1_ID&DLC_INFRA.h  MESCAN1_ID&DLC_LOCO.h  MESCAN1_Utilitaire.c  MESCAN1_Utilitaire.h  MESCAN1_VarInfraBalAig.c  MESCAN1_VarInfraBalAig.h  MESCAN1_VarStatusTrain.c  MESCAN1_VarStatusTrain.h  MESCAN1_VarTrain.c  MESCAN1_VarTrain.h  MESCAN1_common.h  canLinux.c  canLinux.h  loco_Parametres.h  readme.md  test_OPCUA.ini
libs/unirail/ERTMS/: .gitignore  APIUniRail.c  APIUniRail.h  CMakeLists.txt  EBT_message.h  EBT_packet.h  GSM_R_message.h  GSM_R_packet.h  NRBC_message.h  ertms.c  ertms.h  ertms_init_tests.c  ertms_serialize_tests.c  ertms_test.c  ertms_test.h  readme.md
libs/unirail/Librairie_DspicFJ/: Lib_I2C.c  Lib_I2C.h  MCP342x.c  MCP342x.h  Utilitaires.c  Utilitaires.h  clock.c  clock.h  ecan1_Addon.c  ecan1_Addon.h  ecan1_DefinitionVariable.h  ecan1_DsPICFJ.c  ecan1_DsPICFJ.h  readme.md
libs/unirail/XBEE/: readme.md  xbee.c  xbee.h
res/: course_example.txt  course_louis.txt
src/: main.c
